--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "express": "^4.17.1"
   }
  "scripts": {
-    "start": "node index.js"
-}
+  "test": "make test",
+  "start": "node index.js"
+  }
 }
